--- a/adminsite/login.html
+++ b/adminsite/login.html
@@ -9,6 +9,7 @@
     <link href="assets/favicon.ico" rel="shortcut icon">
     <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
     <title>otun writes &#8211; admin</title>
+    <link rel="shortcut icon" href="../blog/otun-content/themes/voice/favicon.ico" type="image/x-icon" />
 </head>
 
 <body class="glossed">
@@ -30,15 +31,15 @@
                     <h3 class="text-center"><i class="fa fa-lock"></i>Login to otun blog admin</h3>
                 </div>
                 <div class="widget-content">
-                    <form action="#" role="form">
+                    <form action="authenticate.php" method="post">
                         <div class="lined-separator">login using email</div>
                         <div class="form-group relative-w">
-                            <input type="email" class="form-control" placeholder="Enter email" />
-                            <i class="fa fa-user input-abs-icon"></i>
+                            <input type="email" name="e" class="form-control" placeholder="Enter email" />
+                            <i class="fa fa-user input-abs-icon"></i><span id="as-e"></span>
                         </div>
                         <div class="form-group relative-w">
-                            <input type="password" class="form-control" placeholder="Password" />
-                            <i class="fa fa-lock input-abs-icon"></i>
+                            <input type="password" name="p" class="form-control" placeholder="Password" />
+                            <i class="fa fa-lock input-abs-icon"></i><span id="as-p"></span>
                         </div>
                         <!--<div class="form-group">
                             <div class="checkbox">
@@ -47,7 +48,7 @@
                                 </label>
                             </div>
                         </div>-->
-                        <button type="submit" class="btn btn-primary btn-rounded btn-iconed">
+                        <button onclick="submit()" class="btn btn-primary btn-rounded btn-iconed">
                             <span>continue</span>
                             <i class="fa fa-arrow-right"></i>
                         </button>
@@ -64,9 +65,5 @@
 <script src="../ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script src='admin.js'></script>
 
-
 </body>
-
-
-<!-- Mirrored from saturn.pinsupreme.com/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 14 Oct 2016 17:45:50 GMT -->
 </html>
