created a new table for ads, wrote queries and resolved other issues

--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
 			  		<li><a href="https://facebook.com/michael.akinfemi" class="facebook_ico soc_rounded" target="_blank" style="width: 47px; height: 47px;">facebook</a></li>
 			  		<li><a href="https://instagram.com/otun_remmy" class="instagram_ico soc_rounded" target="_blank" style="width: 47px; height: 47px;">instagram</a></li>
 			  		<li><a href="https://www.gmail.com/michealakintola106.pog@gmail.com" class="googleplus_ico soc_rounded" target="_blank" style="width: 47px; height: 47px;">googleplus</a></li>
-			  		<li><a href="#" class="twitter_ico soc_rounded" target="_blank" style="width: 47px; height: 47px;">twitter</a></li>
+			  		<li><a href="https://twitter.com/PhemmyAladey" class="twitter_ico soc_rounded" target="_blank" style="width: 47px; height: 47px;">twitter</a></li>
 			  		<li><a href="#" class="rss_ico soc_rounded" target="_blank" style="width: 47px; height: 47px;">rss</a></li>
 	  			</ul>
 		</div>
