editing profile done and added a new category-story

--- a/admins/login.html
+++ b/admins/login.html
@@ -23,7 +23,7 @@
 </script>
 
 <div class="all-wrapper no-menu-wrapper light-bg">
-    <div class="login-logo-w"><a href="index-2.html" class="logo"><i class="fa fa-rocket"></i></a></div>
+    <div class="login-logo-w"><a href="../" class="logo"><i class="fa fa-rocket"></i></a></div>
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <div class="widget widget-blue">
